@@ -15,4 +15,4 @@ MOD_LANGUAGES_FIELD_MODULE_LAYOUT_DESC="Use a different layout from the supplied
 MOD_LANGUAGES_FIELD_USEIMAGE_DESC="Use image flags description"
 MOD_LANGUAGES_FIELD_USEIMAGE_LABEL="Use image flags"
 MOD_LANGUAGES_OPTION_DEFAULT_LANGUAGE="Default"
-MOD_LANGUAGES_XML_DESCRIPTION="This module displays a list of available Content Languages (as defined and published in Language Manager Content tab) for switching between them when one wants to use Joomla! as a multilanguage site. <br />--The plugin 'System - Language Filter' has to be published.--<br /> When switching languages, the module redirects to the Home page defined for the chosen language. Thereafter, the navigation will be the one defined for that language.<br />If the plugin <strong>'System - Language Filter'</strong> is unpublished, this may have unwanted results.<br /><strong>Method:</strong><br />1. Open Language Manager Content tab and make sure the Languages you want to use in contents are published and have a prefix for the URL as well as prefix for the image used in the module display.<br />2. Create a Home page by assigning a language to a menu item and defining it as Default Home page for each published content language. <br />  3. Thereafter, you can assign a language to any Article, Category, Module, Newsfeed, Weblinks in Joomla.<br /> 4. Make sure the module and the plugin are published."
+MOD_LANGUAGES_XML_DESCRIPTION="This module displays a list of available Content Languages (as defined and published in Language Manager Content tab) for switching between them when one wants to use Joomla! as a multilanguage site. <br />--The plugin 'System - Language Filter' has to be published.--<br /> When switching languages, the module redirects to the Home page defined for the chosen language. Thereafter, the navigation will be the one defined for that language.<br />If the plugin <strong>'System - Language Filter'</strong> is unpublished, this may have unwanted results.<br /><strong>Method:</strong><br />1. Open Language Manager Content tab and make sure the Languages you want to use in contents are published and have a Language Code for the URL as well as prefix for the image used in the module display.<br />2. Create a Home page by assigning a language to a menu item and defining it as Default Home page for each published content language. <br />  3. Thereafter, you can assign a language to any Article, Category, Module, Newsfeed, Weblinks in Joomla.<br /> 4. Make sure the module and the plugin are published."
